# HFT-platform

./: .gitmodules  CMakeLists.txt  README.md
ci/: build.yml  lint.yml
infra/: main.tf
kdb/: README.md
kdb/q/: schema.q
python/: backtest.py  data_processing.py
python/Defi Arb P/: Alex Haire Findings.docx  requirements.txt
src/: CMakeLists.txt  main.cpp
src/feedhandler/: CMakeLists.txt  feed_handler.cpp  feed_handler.hpp
src/order_gateway/: CMakeLists.txt  order_gateway.cpp  order_gateway.hpp
src/strategies/: CMakeLists.txt  example_strategy.cpp  example_strategy.hpp
src/utils/: CMakeLists.txt  logging.cpp
strategies/Defi Arb P/: LICENSE  README.md  bot
tests/: CMakeLists.txt  test_feedhandler.cpp  test_order_gateway.cpp  test_strategies.cpp
